# Tracksy

./: AGENTS.md  SPEC.md  index.html  package-lock.json  package.json
docs/design-decisions/: cdp-validation-approach.md  display-server.md  drag-drop-implementation.md  expand-persistence.md  initial-schema.md  linux-packaging.md  notes-panel-redesign.md  notes-panel.md  sort-order-rebalancing.md  webkitgtk-rendering.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: work_items.rs
src-tauri/src/db/: queries.rs
src-tauri/src/db/migrations/: 001_create_work_items.sql
src/components/: NotesPanel.tsx
src/components/Tree/: TreeItem.tsx  TreeView.tsx
src/lib/: fractional.ts  tree.ts
src/store/: workItems.ts
src/types/: workItem.schema.ts  workItem.ts
tests/cdp/: 01-create-root-item.mjs  02-create-child-item.mjs  03-id-and-timestamp-validation.mjs  04-soft-delete.mjs  05-no-hard-delete-audit.mjs  06-cycle-rejection.mjs  07-reorder-and-siblings.mjs  08-updated-at-mutation.mjs  09-zero-console-errors.mjs  10-tree-renders-on-load.mjs  11-expand-collapse.mjs  12-inline-title-edit.mjs  13-status-change-and-done-visual.mjs  14-data-testid-audit.mjs  15-persistence-across-reload.mjs  16-tray-and-window.mjs  README.md  run-all.mjs
tests/cdp/lib/: cdp.mjs
